# SchedulerX

./: .gitignore  AWS_DEPLOYMENT_GUIDE.md  CLAUDE.md  LICENSE  RDS_SETUP_GUIDE.md  README.md  architecture.mmd  aws_user_data.sh  celery_app.py  celery_logging_config.yaml  celeryconfig.py  consumer.py  deploy-celery-worker.sh  deploy-scheduler.sh  deploy.sh  logging_config.yaml  main.py  package-lock.json  package.json  producer.py  pyproject.toml  pytest.ini  scheduler.py  test_calc_exrate_batch_output.json  test_celery.py
app/core/: ex_manager.py  state.py
app/exchanges/: base.py  bybit.py  upbit.py
app/models/: order.py  position.py  ticker.py
app/services/: order_service.py  position_service.py  ticker_service.py
app/templates/: index.html
backend/core/: ex_manager.py  security.py
backend/db/: base.py
backend/dependencies/: auth.py  exchange_hub.py  injection.py
backend/exchanges/: __init__.py  base.py  binance.py  bithumb.py  (+3 more)
frontend/: jest.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
mermaid/: flowchart TD.mmd
migrations/: migrate.sh  seed.sh  version_1.sh
scripts/: init_db.py  manual_position_close.py  refresh_tickers.py
tests/: TEST_RDS_README.md  test_binance_e2e.py  test_binance_unit.py  test_bithumb_e2e.py  test_bybit.py  test_bybit_e2e.py  test_consumer.py  test_consumer_e2e.py  test_ex_manager.py  test_gateio.py  test_get_position_and_balance_e2e.py  test_order_block.py  test_rabbitmq.py  test_rds.py  test_redis.py  test_scheduler.py  test_sqs.py  test_upbit.py  test_work_task_func.py
(+102 files in other folders)
