[project]
name = "kimchi-premium-strategy-implementation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.13",
    "apscheduler>=3.11.0",
    "boto3==1.35.21",
    "celery==5.4.0",
    "fastapi>=0.115.13",
    "pyjwt>=2.10.1",
    "pytest-asyncio>=1.0.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "redis>=6.2.0",
    "uvicorn>=0.34.3",
]
