[project]
name = "SchedulerX"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.21.0",
    "aiohttp>=3.12.13",
    "apscheduler>=3.11.0",
    "async-lru>=2.0.5",
    "bcrypt>=4.3.0",
    "boto3>=1.35.21",
    "cachetools>=6.1.0",
    "celery>=5.4.0",
    "fastapi>=0.115.13",
    "flower>=2.0.1",
    "pika>=1.3.2",
    "psycopg2>=2.9.10",
    "pybit>=5.11.0",
    "pyjwt>=2.10.1",
    "pytest-asyncio>=1.0.0",
    "pytest>=8.4.1",
    "python-binance>=1.0.29",
    "python-dotenv>=1.1.0",
    "python-jose>=3.5.0",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
    "uvicorn[standard]>=0.34.3",
]
